# reference-design-template

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf  sample.yaml  west-zephyr.yml  west.yml  zephyr_nrf9160_swd.jdebug
boards/: aludel_elixir_v1_ns.conf  circuitdojo_feather_nrf9160_ns.conf  circuitdojo_feather_nrf9160_ns.overlay  esp32_devkitc_wroom.conf  esp32_devkitc_wroom.overlay
src/: app_rpc.c  app_sensors.c  app_sensors.h  app_settings.c  app_settings.h  main.c  sensors.c  sensors.h
